user-management-app/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-management-frontend-service
            port:
              number: 5173
      - path: /api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-management-backend-service
            port:
              number: 5000
      - path: /adminer/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: adminer-service
            port:
              number: 8080
